# 2DAdventure

./: CMakeLists.txt  README.md  WindowsProject1.sln
BasicGame/: CMakeLists.txt  CollisionUtil.cpp  CollisionUtil.h  GameObject.cpp  LevelProp.cpp  LevelProp.h  Peripherals.cpp  Peripherals.h  X.cpp  X.h  application.cpp  application.h  entry.cpp  imports.h
WindowsProject1/: AppConfig.cpp  Collider.cpp  Collider.h  CollisionUtil.cpp  ColorRect.cpp  ColorRect.h  GameConsole.cpp  ImageUtil.cpp  ImageUtil.h  LevelProp.h  Peripherals.cpp  Peripherals.h  ResetBox.cpp  WindowsProject1.vcxproj  WindowsProject1.vcxproj.filters  X.cpp  X.h  application.cpp  application.h  entry.cpp  util.h
WindowsProject1/x64/Debug/: WindowsProject1.exe.recipe  vc143.idb
WindowsProject1/x64/Debug/WindowsProject1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  WindowsProject1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
headers/: CMakeLists.txt  Collider.h  ImageUtil.h  Peripherals.h  ResetBox.h  X.h  application.h  imports.h
src/: CMakeLists.txt  ColorRect.cpp  ColorRect.h  ConfigMgr.cpp  ConfigMgr.h  GameObject.cpp  GameObject.h  ImageUtil.cpp  LevelProp.cpp  LevelProp.h  Peripherals.cpp  Peripherals.h  X.cpp  X.h  application.cpp  application.h  entry.cpp  imports.h  util.h
src/gameobject/: Collider.cpp  ColorRect.cpp  ColorRect.h  GameObject.cpp  GameObject.h  LevelProp.cpp  LevelProp.h  ResetBox.cpp
src/util/: AppConfig.cpp  CollisionUtil.cpp  ConfigMgr.cpp  ConfigMgr.h  GameConsole.cpp  ImageUtil.cpp  ImageUtil.h  X.cpp  X.h  util.h
x64/Debug/: level.txt  output.txt
